app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rt-app
  labels:
    app: rt
spec:
  ports:
    - port: 9000
  selector:
    app: rt
    tier: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rt-app
  labels:
    app: rt
spec:
  selector:
    matchLabels:
      app: rt
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rt
        tier: app
    spec:
      containers:
      - name: rtapp
        image: ghcr.io/davel/rtapp
        readinessProbe:
          tcpSocket:
            port: 9000 
        livenessProbe:
          tcpSocket:
            port: 9000 
        ports:
        - containerPort: 9000
          name: fcgi
