mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rt-database
  labels:
    app: rt
spec:
  ports:
    - port: 3306
  selector:
    app: rtcpan
    tier: database
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rt-database
  labels:
    app: rt
spec:
  selector:
    matchLabels:
      app: rt
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rt
        tier: database
    spec:
      containers:
      - image: docker.io/mariadb:10
        name: database
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
