nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rt-frontend
  labels:
    app: rt
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: rt
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rt-frontend
  labels:
    app: rt
spec:
  selector:
    matchLabels:
      app: rt
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rt
        tier: frontend
    spec:
      containers:
      - name: rtfrontend
        image: ghcr.io/davel/rtfrontend
        readinessProbe:
          httpGet:
            path: /
            port: 80
        livenessProbe:
          tcpSocket:
            port: 80 
        ports:
        - containerPort: 80
          name: http
